# PkEtMin

./: .gitignore  CMakeLists.txt  DSE.java  DrawDist.py  README.md  Risk-Base Allocation.pptx  boost_test.cpp  export-meshgird-4-excel.py  mu_vars_enrg.csv  ptss-regression.py  ptss_StandardNormalDistribution.hpp  ptss_StatisticalDistribution.hpp  ptss_gsltest.cpp  run.sh  saved-old.cpp  test.cpp  test.sh
BONMINBaselineMatlabWindows/: benchParams.mat  computeExecTime.m  computeOptimalOracle.m  computeOptimalOracleDual.m  computePKPower.m  computePowerPerPhase.m  example1.m  exportParams.m  results.py  runAll.m  topOracle.m  topOracleDual.m  workload_gen.py
TCADExp/: exp-tcad.py  exp-tcad2.py  extract.sh
include/: ptss_StatisticalDistribution.hpp  ptss_bonmin.hpp  ptss_config.hpp  ptss_config_nph.hpp  ptss_dse.hpp  ptss_nlopt.hpp  ptss_pkmin.hpp
java-reference/: DSE-latest.java
src/: benchmark_characteristics.cpp  ptss_StatisticalDistribution.cpp  ptss_bonmin.cpp  ptss_dse_hrt.cpp  ptss_dse_srt.cpp  ptss_nlopt.cpp  ptss_nlopt_test.cpp  ptss_pkmin.cpp  ptss_test.cpp  ptss_test_StatisticalDistribution.cpp  ptss_test_bonmin.cpp  ptss_test_gurobi.cpp  ptss_test_histogram.cpp  ptss_test_pkmin.cpp  ptss_test_pkmin2.cpp  ptss_test_pkmin3.cpp  ptss_test_srt.cpp  test  test2  test2.cpp  testCSVRead.cpp  test_compile.sh  tmp.cpp
src/boostExamples/: cfg.dot  test2  tmp.dot  tmp3.cpp  tmp4.cpp  tmp5.cpp
